--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ title: "academic" # the name of your site, e.g. ACME Corp.
 description: "a Jekyll theme for academia"
 
 
-theme: academic
+remote_theme: LenPaul/academic
