--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
-title: "academic" # the name of your site, e.g. ACME Corp.
-description: "a Jekyll theme for academia"
+title: "MLMPS" # the name of your site, e.g. ACME Corp.
+description: "Working group on machine learning methods for physical systems"
 
 
 remote_theme: LenPaul/academic
