--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,8 +4,8 @@ menu:
 - {name: 'contact', url: '/contact'}
 
 people:
-- {name: 'Mengyang Gu', title: 'title', department: 'Statistics and Applied Probability', institution: 'University of California Santa Barbara', email: 'test@ucsb.edu', image: 'assets/img/primary-investigator.jpg', url: 'Mengyang-Gu'}
-- {name: 'Sui Tang', title: 'title', department: 'Mathematics', institution: 'University of California Santa Barbara',email: 'test@ucsb.edu', image: 'assets/img/lab-technician.jpg', url: 'Sui-Tang'}
+- {name: 'Mengyang Gu', title: 'Professor', department: 'Statistics and Applied Probability', institution: 'University of California Santa Barbara', email: 'test@ucsb.edu', image: 'assets/img/primary-investigator.jpg', url: 'Mengyang-Gu'}
+- {name: 'Sui Tang', title: 'Professor', department: 'Mathematics', institution: 'University of California Santa Barbara',email: 'test@ucsb.edu', image: 'assets/img/lab-technician.jpg', url: 'Sui-Tang'}
 - {name: 'Erika McPhillips', title: 'Graduate Student', department: 'Statistics and Applied Probability', institution: 'University of California Santa Barbara', email: 'test@ucsb.edu', image: 'assets/img/graduate-student.jpg', url: 'Erika-McPhillips'}
 
 contacts:
