--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,6 +7,8 @@ people:
 - {name: 'Mengyang Gu', title: 'Professor', department: 'Statistics and Applied Probability', institution: 'University of California Santa Barbara', email: 'test@ucsb.edu', image: 'assets/img/primary-investigator.jpg', url: 'Mengyang-Gu'}
 - {name: 'Sui Tang', title: 'Professor', department: 'Mathematics', institution: 'University of California Santa Barbara',email: 'test@ucsb.edu', image: 'assets/img/lab-technician.jpg', url: 'Sui-Tang'}
 - {name: 'Erika McPhillips', title: 'Graduate Student', department: 'Statistics and Applied Probability', institution: 'University of California Santa Barbara', email: 'test@ucsb.edu', image: 'assets/img/graduate-student.jpg', url: 'Erika-McPhillips'}
+- {name: 'Xinyi Fang', title: 'Graduate Student', department: 'Statistics and Applied Probability', institution: 'University of California Santa Barbara', email: 'test@ucsb.edu', image: 'assets/img/graduate-student.jpg', url: 'Xinyi-Fang'}
+- {name: 'Xubo Liu', title: 'Graduate Student', department: 'Statistics and Applied Probability', institution: 'University of California Santa Barbara', email: 'test@ucsb.edu', image: 'assets/img/graduate-student.jpg', url: 'Xubo-Liu'}
 
 contacts:
 - {name: 'Mengyang Gu', title: 'Professor', department: 'Statistics and Applied Probability', institution: 'University of California Santa Barbara', email: 'test@ucsb.edu', image: 'assets/img/contact.jpg'}
